# windows-named-pipes

./: .gitignore  LICENSE  README.md  stack-lts-5.yaml  stack-lts-6.yaml  stack-lts-7.yaml  windows-named-pipes.cabal
example/: ping-client.hs  ping-server.hs
src/Data/Streaming/: NamedPipes.hs
src/Data/Streaming/NamedPipes/: Internal.hs
src/System/Win32/: NamedPipes.hs
src/System/Win32/NamedPipes/: Internal.hsc
test/: TestCase.hs  hlint.hs  unit-tests.hs
test/TestCase/Data/Streaming/: NamedPipes.hs
