name:                   windows-named-pipes
version:                0.1.0.0
synopsis:
  Windows Named Pipes with streaming-commons-like interface.
description:
  Library contains both high-level and low-level APIs to Windows Named Pipes.
  .
  High-level API allows simple creation of both servers and clients. This API
  uses conventions and style from @streaming-commons@ library.
homepage:
  https://github.com/IxpertaSolutions/windows-named-pipes
bug-reports:
  https://github.com/IxpertaSolutions/windows-named-pipes/issues
license:                BSD3
license-file:           LICENSE
author:                 Ixcom Core Team
maintainer:             ixcom-core@ixperta.com
copyright:              (c) 2016 Ixperta Solutions s.r.o.
category:               Data, System, Network
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

flag pedantic
  description:          Pass additional warning flags and -Werror to GHC.
  default:              False
  manual:               True

flag test-hlint
  description:          Enable test suite that checks sources using HLint.
  default:              True
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      Data.Streaming.NamedPipes
    , Data.Streaming.NamedPipes.Internal
    , System.Win32.NamedPipes
    , System.Win32.NamedPipes.Internal
  -- other-modules:       

  default-language:     Haskell2010
  other-extensions:
      DeriveGeneric
    , ForeignFunctionInterface
    , LambdaCase
    , NoImplicitPrelude

  build-depends:
      base >=4.8 && <5
    , bytestring
    , case-insensitive
    , monad-loops == 0.4.*
    , streaming-commons >=0.1.14 && <0.2
    -- ^ Version 0.1.14 exports HasReadBufferSize type class.
    , Win32 ==2.3.*

  build-tools:          hsc2hs

  ghc-options:
    -Wall
    -fwarn-implicit-prelude
    -fwarn-missing-import-lists
    -fwarn-tabs

  if flag(pedantic)
    ghc-options:        -Werror

test-suite unit-tests
  hs-source-dirs:       src, test
  type:                 exitcode-stdio-1.0
  main-is:              unit-tests.hs

  other-modules:
    -- {{{ Unit Tests Modules -------------------------------------------------
      TestCase
    , TestCase.Data.Streaming.NamedPipes

    -- }}} Unit Tests Modules -------------------------------------------------
    -- {{{ Other Modules ------------------------------------------------------

    , Data.Streaming.NamedPipes
    , Data.Streaming.NamedPipes.Internal
    , System.Win32.NamedPipes
    , System.Win32.NamedPipes.Internal

    -- }}} Other Modules ------------------------------------------------------

  default-language:     Haskell2010
  other-extensions:
      DeriveGeneric
    , ForeignFunctionInterface
    , LambdaCase
    , NoImplicitPrelude

  build-depends:
    -- {{{ Library dependencies -----------------------------------------------
      base >=4.8 && <5
    , bytestring
    , case-insensitive
    , monad-loops == 0.4.*
    , streaming-commons >=0.1.14 && <0.2
    -- ^ Version 0.1.14 exports HasReadBufferSize type class.
    , Win32 ==2.3.*
    -- }}} Library dependencies -----------------------------------------------

    -- {{{ Test-suite dependencies --------------------------------------------
    , HUnit >=1.2 && <2
    , QuickCheck >=2.4 && <2.9
    -- ^ Same bounds as test-framework-quickcheck2 0.3.0.
    , quickcheck-instances >=0.3.6 && <0.4
    -- ^ 0.3.6 is the first version that has instances for unordered-containers
    , test-framework >=0.8 && <1
    , test-framework-hunit >=0.2.6
    , test-framework-quickcheck2 >=0.3
    -- }}} Test-suite dependencies --------------------------------------------

    -- {{{ Test dependencies --------------------------------------------------
    , async
    -- }}} Test dependencies --------------------------------------------------

  build-tools:          hsc2hs

  ghc-options:
    -Wall
    -fwarn-implicit-prelude
    -fwarn-missing-import-lists
    -fwarn-tabs
    -threaded
  cpp-options:          -DEXPORT_INTERNALS

  if flag(pedantic)
    ghc-options:        -Werror

test-suite hlint
  hs-source-dirs:       test
  type:                 exitcode-stdio-1.0
  main-is:              hlint.hs
  default-language:     Haskell2010
  other-extensions:
      NoImplicitPrelude

  ghc-options:
    -Wall
    -fwarn-implicit-prelude
    -fwarn-missing-import-lists
    -fwarn-tabs
    -threaded
    -with-rtsopts=-N

  if flag(pedantic)
    ghc-options:        -Werror

  if flag(test-hlint)
    build-depends:
        base >=4.8 && <5.0
      , hlint ==1.9.*
  else
    buildable: False

--executable example-ping-server
--  hs-source-dirs:       src, example
--  main-is:              ping-server.hs
--
--  other-modules:       
--      Data.Streaming.NamedPipes
--    , Data.Streaming.NamedPipes.Internal
--    , System.Win32.NamedPipes
--    , System.Win32.NamedPipes.Internal
--
--  default-language:     Haskell2010
--  other-extensions:
--      DeriveGeneric
--    , ForeignFunctionInterface
--    , LambdaCase
--    , NoImplicitPrelude
--
--  build-depends:
--      base >=4.8 && <5
--    , bytestring
--    , case-insensitive
--    , streaming-commons >=0.1.14 && <0.2
--    -- ^ Version 0.1.14 exports HasReadBufferSize type class.
--    , Win32 ==2.3.*
--
--  build-tools:          hsc2hs
--
--  ghc-options:
--    -Wall
--    -fwarn-implicit-prelude
--    -fwarn-missing-import-lists
--    -fwarn-tabs
--    -threaded
--
--  if flag(pedantic)
--    ghc-options:        -Werror
--
--executable example-ping-client
--  hs-source-dirs:       src, example
--  main-is:              ping-client.hs
--
--  other-modules:       
--      Data.Streaming.NamedPipes
--    , Data.Streaming.NamedPipes.Internal
--    , System.Win32.NamedPipes
--    , System.Win32.NamedPipes.Internal
--
--  default-language:     Haskell2010
--  other-extensions:
--      DeriveGeneric
--    , ForeignFunctionInterface
--    , LambdaCase
--    , NoImplicitPrelude
--
--  build-depends:
--      base >=4.8 && <5
--    , bytestring
--    , case-insensitive
--    , streaming-commons >=0.1.14 && <0.2
--    -- ^ Version 0.1.14 exports HasReadBufferSize type class.
--    , Win32 ==2.3.*
--
--  build-tools:          hsc2hs
--
--  ghc-options:
--    -Wall
--    -fwarn-implicit-prelude
--    -fwarn-missing-import-lists
--    -fwarn-tabs
--    -threaded
--
--  if flag(pedantic)
--    ghc-options:        -Werror
